Name:                gloss-examples
Version:             1.13.0.4
License:             MIT
License-file:        LICENSE
Author:              Ben Lippmeier
Maintainer:          benl@ouroborus.net
Build-Type:          Simple
Cabal-Version:       >=1.10
Stability:           experimental
Category:            Graphics
Homepage:            http://gloss.ouroborus.net
Bug-reports:         gloss@ouroborus.net
Description:
        Examples using the gloss graphics library.
        A mixed bag of fractals, particle simulations and cellular automata.

Synopsis:
        Examples using the gloss library

Flag llvm
  Description:  Compile via LLVM. This produces much better object code
                but your GHC needs to have been built against the LLVM compiler.

  Default:      False

source-repository head
  type:           git
  location:       https://github.com/benl23x5/gloss

source-repository this
  type:         git
  tag:          v1.13.0.2
  location:     https://github.com/benl23x5/gloss

Executable gloss-bitmap
  Main-is:        Main.hs
  hs-source-dirs: picture/Bitmap
  Build-depends:
          base                          >= 4.8 && < 5
        , bytestring                    >= 0.10 && < 0.12
        , bmp                           == 1.2.*
        , gloss                         == 1.13.*

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -Wall
        -threaded
        -rtsopts


Executable gloss-boids
  Main-is:        Main.hs
  hs-source-dirs: picture/Boids

  other-modules:
        Vec2
        KDTree2d

  Build-depends:
          base                          >= 4.8 && < 5
        , random                        == 1.2.*
        , gloss                         == 1.13.*

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -threaded
        -rtsopts


Executable gloss-clock
  Main-is:        Main.hs
  hs-source-dirs: picture/Clock

  Build-depends:
          base                          >= 4.8 && < 5
        , gloss                         == 1.13.*

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -Wall
        -threaded
        -rtsopts


Executable gloss-color
  Main-is:        Main.hs
  hs-source-dirs: picture/Color

  Build-depends:
          base                          >= 4.8 && < 5
        , gloss                         == 1.13.*
        , vector                        >= 0.11 && < 0.13

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -Wall
        -threaded
        -rtsopts


Executable gloss-conway
  Main-is:        Main.hs
  hs-source-dirs: picture/Conway

  other-modules:
        Cell
        World

  Build-depends:
          base                          >= 4.8 && < 5
        , random                        == 1.2.*
        , gloss                         == 1.13.*
        , vector                        >= 0.11 && < 0.13

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -Wall
        -threaded
        -rtsopts


Executable gloss-draw
  Main-is:        Main.hs
  hs-source-dirs: picture/Draw

  Build-depends:
          base                          >= 4.8 && < 5
        , gloss                         == 1.13.*

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -Wall
        -threaded
        -rtsopts


Executable gloss-easy
  Main-is:        Main.hs
  hs-source-dirs: picture/Easy

  Build-depends:
          base                          >= 4.8 && < 5
        , gloss                         == 1.13.*

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -Wall
        -threaded
        -rtsopts


Executable gloss-eden
  Main-is:        Main.hs
  hs-source-dirs: picture/Eden

  other-modules:
        Cell
        Community
        World

  Build-depends:
          base                          >= 4.8 && < 5
        , gloss                         == 1.13.*
        , random                        == 1.2.*

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -Wall
        -threaded
        -rtsopts


Executable gloss-flake
  Main-is:        Main.hs
  hs-source-dirs: picture/Flake

  Build-depends:
          base                          >= 4.8 && < 5
        , gloss                         == 1.13.*

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -Wall
        -threaded
        -rtsopts


Executable gloss-gameevent
  Main-is:        Main.hs
  hs-source-dirs: picture/GameEvent

  Build-depends:
          base                          >= 4.8 && < 5
        , gloss                         == 1.13.*

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -Wall
        -threaded
        -rtsopts


Executable gloss-hello
  Main-is:        Main.hs
  hs-source-dirs: picture/Hello

  Build-depends:
          base                          >= 4.8 && < 5
        , gloss                         == 1.13.*

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -Wall
        -threaded
        -rtsopts


Executable gloss-lifespan
  Main-is:        Main.hs
  hs-source-dirs: picture/Lifespan

  other-modules:
        Cell
        Community
        World

  Build-depends:
          base                          >= 4.8 && < 5
        , gloss                         == 1.13.*
        , random                        == 1.2.*

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -Wall
        -threaded
        -rtsopts


Executable gloss-machina
  Main-is:        Main.hs
  hs-source-dirs: picture/Machina

  Build-depends:
          base                          >= 4.8 && < 5
        , gloss                         == 1.13.*

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -Wall
        -threaded
        -rtsopts


Executable gloss-occlusion
  Main-is: Main.hs
  hs-source-dirs: picture/Occlusion

  other-modules:
        Cell
        World
        State
        Data

  Build-depends:
          base                          >= 4.8 && < 5
        , gloss                         == 1.13.*
        , gloss-algorithms              == 1.13.*

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -threaded
        -rtsopts


Executable gloss-styrene
  Main-is:        Main.hs
  hs-source-dirs: picture/Styrene

  other-modules:
        Actor
        Advance
        Collide
        Config
        Contact
        QuadTree
        World

  Build-depends:
          base                          >= 4.8 && < 5
        , containers                    >= 0.5 && < 0.7
        , ghc-prim
        , gloss                         == 1.13.*

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -Wall
        -threaded
        -rtsopts


Executable gloss-tree
  Main-is:        Main.hs
  hs-source-dirs: picture/Tree

  Build-depends:
          base                          >= 4.8 && < 5
        , gloss                         == 1.13.*

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -Wall
        -threaded
        -rtsopts


Executable gloss-visibility
  Main-is:        Main.hs
  hs-source-dirs: picture/Visibility

  other-modules:
        Draw
        Geometry.Randomish
        Geometry.Segment
        Interface
        State
        World

  Build-depends:
          base                          >= 4.8 && < 5
        , gloss                         == 1.13.*
        , vector                        >= 0.11 && < 0.13

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -Wall
        -threaded
        -rtsopts


Executable gloss-zen
  Main-is:        Main.hs
  hs-source-dirs: picture/Zen

  Build-depends:
          base                          >= 4.8 && < 5
        , gloss                         == 1.13.*

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -Wall
        -threaded
        -rtsopts


Executable gloss-crystal
  Main-is:        Main.hs
  hs-source-dirs: raster/Crystal

  Build-depends:
          base                          >= 4.8 && < 5
        , gloss                         == 1.13.*
        , gloss-raster                  == 1.13.*

  Default-Language:
        Haskell2010

  ghc-options:
        -Wall
        -threaded
        -rtsopts
        -eventlog
        -O2
        -fmax-simplifier-iterations=20
        -fsimplifier-phases=3
        -fno-liberate-case
        -funfolding-use-threshold1000
        -funfolding-keeness-factor1000

  if flag(llvm)
    ghc-options:
        -fllvm
        -optlo-O3


Executable gloss-ray
  Main-is:        Main.hs
  hs-source-dirs: raster/Ray

  other-modules:
        Light
        Object
        Trace
        Vec3
        World

  Build-depends:
          base                          >= 4.8 && < 5
        , repa                          == 3.4.*
        , repa-io                       == 3.4.*
        , gloss                         == 1.13.*
        , gloss-raster                  == 1.13.*

  Default-Language:
        Haskell2010

  ghc-options:
        -Wall
        -threaded
        -rtsopts
        -eventlog
        -O2
        -fmax-simplifier-iterations=20
        -fsimplifier-phases=3
        -fno-liberate-case
        -funfolding-use-threshold1000
        -funfolding-keeness-factor1000

  if flag(llvm)
    ghc-options:
        -fllvm
        -optlo-O3


Executable gloss-pulse
  Main-is:        Main.hs
  hs-source-dirs: raster/Pulse

  Build-depends:
          base                          >= 4.8 && < 5
        , gloss                         == 1.13.*
        , gloss-raster                  == 1.13.*

  ghc-options:
        -Wall
        -threaded
        -rtsopts
        -eventlog
        -O2
        -fmax-simplifier-iterations=20
        -fsimplifier-phases=3
        -fno-liberate-case
        -funfolding-use-threshold1000
        -funfolding-keeness-factor1000

  Default-Language:
        Haskell2010

  if flag(llvm)
    ghc-options:
        -fllvm
        -optlo-O3


Executable gloss-wave
  Main-is:        Main.hs
  hs-source-dirs: raster/Wave

  Build-depends:
          base                          >= 4.8 && < 5
        , ghc-prim
        , gloss                         == 1.13.*
        , gloss-raster                  == 1.13.*
        , vector                        >= 0.11 && < 0.13

  Default-Language:
        Haskell2010

  ghc-options:
        -Wall
        -threaded
        -rtsopts
        -eventlog
        -O2
        -fmax-simplifier-iterations=20
        -fsimplifier-phases=3
        -fno-liberate-case
        -funfolding-use-threshold1000
        -funfolding-keeness-factor1000

  if flag(llvm)
    ghc-options:
        -fllvm
        -optlo-O3


-- Disabled on 8/11/2016 as the linear solver is taking too long to build.
-- GHC compile time performance has regressed recently, so we could enable
-- it again once that it fixed.
--
-- Executable gloss-fluid
--   Build-depends:
--         base            >= 4.8 && < 4.12
--         ghc-prim
--         vector          == 0.11.*
--         repa            == 3.4.*
--         repa-io         == 3.4.*
--         repa-algorithms == 3.4.*
--         gloss           == 1.12.*
--   Main-is:        Main.hs
--   other-modules:
--         Args Config FieldElt Model UserEvent
--         Solve.Density   Solve.Velocity
--         Stage.Advection Stage.Boundary Stage.Diffusion
--         Stage.Linear    Stage.Project  Stage.Sources
--   hs-source-dirs: raster/Fluid/src-repa
--
--   ghc-options:
--         -Wall -threaded -rtsopts -eventlog
--         -Odph -fno-liberate-case
--         -funfolding-use-threshold1000
--         -funfolding-keeness-factor1000
--
--  if flag(llvm)
--   ghc-options:
--         -fllvm -optlo-O3



Executable gloss-snow
  Main-is:        Main.hs
  hs-source-dirs: raster/Snow

  Build-depends:
          base                          >= 4.8 && < 5
        , gloss-raster                  == 1.13.*
        , random                        == 1.2.*
        , repa                          == 3.4.*
        , repa-algorithms               == 3.4.*

  Default-Language:
        Haskell2010

  ghc-options:
        -Wall
        -threaded
        -rtsopts
        -eventlog
        -O2
        -fmax-simplifier-iterations=20
        -fsimplifier-phases=3
        -fno-liberate-case
        -funfolding-use-threshold1000
        -funfolding-keeness-factor1000

  if flag(llvm)
    ghc-options:
        -fllvm
        -optlo-O3


Executable gloss-mandel
  Main-is:        Main.hs
  hs-source-dirs: raster/Mandel

  other-modules:
        Solver

  Build-depends:
          base                          >= 4.8 && < 5
        , gloss-raster                  == 1.13.*
        , repa-algorithms               == 3.4.*
        , repa-io                       == 3.4.*
        , gloss                         == 1.13.*
        , repa                          == 3.4.*

  Default-Language:
        Haskell2010

  ghc-options:
        -Wall
        -threaded
        -rtsopts
        -eventlog
        -O2
        -fmax-simplifier-iterations=20
        -fsimplifier-phases=3
        -fno-liberate-case
        -funfolding-use-threshold1000
        -funfolding-keeness-factor1000

  if flag(llvm)
    ghc-options:
        -fllvm
        -optlo-O3


Executable gloss-graph
  Main-is:        Main.hs
  hs-source-dirs: picture/Graph

  Build-depends:
          base                          >= 4.8 && < 5
        , containers                    >= 0.5 && < 0.7
        , random                        == 1.2.*
        , gloss                         == 1.13.*

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -Wall
        -threaded
        -rtsopts


Executable gloss-gravity
  Main-is:        Main.hs
  hs-source-dirs: picture/Gravity

  Build-depends:
          base                          >= 4.8 && < 5
        , containers                    >= 0.5 && < 0.7
        , random                        == 1.2.*
        , gloss                         == 1.13.*

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -Wall
        -threaded
        -rtsopts


-- Disabled on 8/11/2016 as GLFW-b does not build on OSX.
-- Executable gloss-render
--   Build-depends:
--         base            >= 4.8 && < 4.12
--         containers      == 0.5.*
--         gloss           == 1.12.*
--         gloss-rendering == 1.12.*
--         GLFW-b
--   Main-is:        Main.hs
--   hs-source-dirs: picture/Render
--   ghc-options:
--         -O2
--         -Wall
--         -threaded
--         -rtsopts

-- vim: nospell
