Name:                gloss-field
Version:             1.5.1.1
License:             MIT
License-file:        LICENSE
Author:              Ben Lippmeier
Maintainer:          benl@ouroborus.net
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           provisional
Category:            Graphics
Homepage:            http://gloss.ouroborus.net
Bug-reports:         gloss@ouroborus.net
Description:
	Gloss hides the pain of drawing simple vector graphics behind a nice data type and
	a few display functions. Gloss uses OpenGL under the hood, but you won't need to
	worry about any of that. Get something cool on the screen in under 10 minutes.

Synopsis:
        Painless 2D vector graphics, animations and simulations.

Tested-with: GHC == 6.12.1, GHC == 7.0.1

Library
  Build-Depends: 
        base       == 4.*,
        ghc-prim   == 0.2.*,
        containers >= 0.3.0 && < 0.5.0,
        gloss      == 1.5.1.*,
        repa       == 3.0.0.*

  ghc-options:      -O2 -Wall

  Exposed-modules:
        Graphics.Gloss.Field


