Name:                gloss-field
Version:             1.6.0.1
License:             MIT
License-file:        LICENSE
Author:              Ben Lippmeier
Maintainer:          benl@ouroborus.net
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           provisional
Category:            Graphics
Homepage:            http://gloss.ouroborus.net
Bug-reports:         gloss@ouroborus.net
Description:
        Parallel rendering of raster fields.

Synopsis:
        Painless 2D vector graphics, animations and simulations.

Tested-with: GHC == 6.12.1, GHC == 7.0.1

Library
  Build-Depends: 
        base       == 4.*,
        ghc-prim   == 0.2.*,
        containers >= 0.3.0 && < 0.5.0,
        gloss      == 1.6.0.*,
        repa       == 3.0.0.*

  ghc-options:      -O2 -Wall

  Exposed-modules:
        Graphics.Gloss.Field


