Name:                gloss-raster
Version:             1.11.1.1
License:             MIT
License-file:        LICENSE
Author:              Ben Lippmeier
Maintainer:          benl@ouroborus.net
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           provisional
Category:            Graphics
Homepage:            http://gloss.ouroborus.net
Bug-reports:         gloss@ouroborus.net
Description:
        Parallel rendering of raster images.

Synopsis:
        Parallel rendering of raster images.

Flag llvm
  Description:  Compile via LLVM. This produces much better object code,
                but your GHC needs to have been built against the LLVM compiler.

  Default:      False

source-repository head
        type:           git
        location:       https://github.com/benl23x5/gloss

Library
  Build-Depends:
        base            >= 4.8 && < 4.10,
        ghc-prim        >= 0.4 && < 0.6,
        containers      == 0.5.*,
        repa            == 3.4.*,
        gloss           == 1.11.*,
        gloss-rendering == 1.11.*

  ghc-options:
        -Odph -fno-liberate-case

  Exposed-modules:
        Graphics.Gloss.Raster.Field
        Graphics.Gloss.Raster.Array

