Name:                gloss-raster
Version:             1.13.1.1
License:             MIT
License-file:        LICENSE
Author:              Ben Lippmeier
Maintainer:          benl@ouroborus.net
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           provisional
Category:            Graphics
Homepage:            http://gloss.ouroborus.net
Bug-reports:         gloss@ouroborus.net
Description:
        Parallel rendering of raster images.

Synopsis:
        Parallel rendering of raster images.

Flag llvm
  Description:  Compile via LLVM. This produces much better object code
                but your GHC needs to have been built against the LLVM compiler.

  Default:      False

source-repository head
  type:         git
  location:     https://github.com/benl23x5/gloss

source-repository this
  type:         git
  tag:          v1.13.0.2
  location:     https://github.com/benl23x5/gloss

Library
  Build-Depends:
          base                          >= 4.8 && < 4.13
        , containers                    >= 0.5 && < 0.7
        , ghc-prim
        , gloss                         == 1.13.*
        , gloss-rendering               == 1.13.*
        , repa                          == 3.4.*

  ghc-options:
        -O2
        -fmax-simplifier-iterations=20
        -fsimplifier-phases=3
        -fno-liberate-case

  Exposed-modules:
        Graphics.Gloss.Raster.Field
        Graphics.Gloss.Raster.Array

-- vim: nospell
