name:           gloss-rendering
version:        1.9.1.1
license:        MIT
license-file:   LICENSE
author:         Elise Huard
maintainer:     elise@jabberwocky.eu benl@ouroborus.net
category:       Graphics
build-type:     Simple
cabal-version:  >=1.10
synopsis:       Gloss Picture data type and rendering functions.     
description:    Gloss Picture data type and rendering functions.

library
  exposed-modules:
        Graphics.Gloss.Render
        Graphics.Gloss.Internals.Render.State
        Graphics.Gloss.Geometry
        Graphics.Gloss.Geometry.Angle
        Graphics.Gloss.Geometry.Line
        Graphics.Gloss.Data.Display
        Graphics.Gloss.Data.Point
        Graphics.Gloss.Data.Vector
        Graphics.Gloss.Data.Quad
        Graphics.Gloss.Data.Extent
        Graphics.Gloss.Data.QuadTree
        Graphics.Gloss.Data.Color
        Graphics.Gloss.Internals.Color
        Graphics.Gloss.Data.Picture
        Graphics.Gloss.Data.ViewPort

  other-modules:       
        Graphics.Gloss.Internals.Render.Common
        Graphics.Gloss.Internals.Render.Picture
        Graphics.Gloss.Internals.Render.Circle
        Graphics.Gloss.Internals.Render.Bitmap

  build-depends:       
        base       == 4.7.*,
        containers == 0.5.*,
        bytestring == 0.10.*,
        OpenGL     == 2.9.*,
        GLUT       == 2.5.*,
        bmp        == 1.2.*

  ghc-options:
        -Wall

  default-language:    
        Haskell2010

  default-extensions:    
        DeriveDataTypeable
