name:           gloss-rendering
version:        1.13.1.2
license:        MIT
license-file:   LICENSE
author:         Elise Huard
maintainer:     elise@jabberwocky.eu benl@ouroborus.net
category:       Graphics
build-type:     Simple
cabal-version:  >=1.10
synopsis:       Gloss picture data types and rendering functions.
description:
        Gloss picture data types and rendering functions. These functions
        don't do any window management. If you want gloss to setup your window as
        well then use the plain @gloss@ package.

source-repository head
  type:         git
  location:     https://github.com/benl23x5/gloss

source-repository this
  type:         git
  tag:          v1.12.0.0
  location:     https://github.com/benl23x5/gloss

library
  exposed-modules:
        Graphics.Gloss.Rendering

  other-modules:
        Graphics.Gloss.Internals.Data.Color
        Graphics.Gloss.Internals.Data.Picture
        Graphics.Gloss.Internals.Rendering.Bitmap
        Graphics.Gloss.Internals.Rendering.Circle
        Graphics.Gloss.Internals.Rendering.Color
        Graphics.Gloss.Internals.Rendering.Common
        Graphics.Gloss.Internals.Rendering.Picture
        Graphics.Gloss.Internals.Rendering.State

  build-depends:
          base                          >= 4.8 && < 5
        , bmp                           == 1.2.*
        , bytestring                    == 0.11.*
        , containers                    >= 0.5 && < 0.7
        , GLUT                          == 2.7.*
        , OpenGL                        >= 2.12 && < 3.1

  ghc-options:
        -Wall -O2

  default-language:
        Haskell2010

-- vim: nospell
