name:           gloss-rendering
version:        1.13.1.2
license:        MIT
license-file:   LICENSE
author:         Elise Huard
maintainer:     elise@jabberwocky.eu benl@ouroborus.net
category:       Graphics
build-type:     Simple
cabal-version:  >=1.10
synopsis:       Gloss picture data types and rendering functions.
description:
        Gloss picture data types and rendering functions. These functions
        don't do any window management. If you want gloss to setup your window as
        well then use the plain @gloss@ package.

tested-with:
  GHC == 9.10.1
  GHC == 9.8.2
  GHC == 9.6.6
  GHC == 9.4.8
  GHC == 9.2.8
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4
  GHC == 8.2.2
  GHC == 8.0.2

source-repository head
  type:         git
  location:     https://github.com/benl23x5/gloss

library
  exposed-modules:
        Graphics.Gloss.Rendering

  other-modules:
        Graphics.Gloss.Internals.Data.Color
        Graphics.Gloss.Internals.Data.Picture
        Graphics.Gloss.Internals.Rendering.Bitmap
        Graphics.Gloss.Internals.Rendering.Circle
        Graphics.Gloss.Internals.Rendering.Color
        Graphics.Gloss.Internals.Rendering.Common
        Graphics.Gloss.Internals.Rendering.Picture
        Graphics.Gloss.Internals.Rendering.State

  build-depends:
          base                          >= 4.8 && < 5
        , bmp                           == 1.2.*
        , bytestring                    >= 0.10 && < 0.13
        , containers                    >= 0.5  && < 0.8
        , GLUT                          == 2.7.*
        , OpenGL                        >= 2.12 && < 3.1

  ghc-options:
        -Wall -O2

  default-language:
        Haskell2010

-- vim: nospell
